<resources>
    <string name="app_name">Oportunidad Zapata</string>
    <string name="start_title_text">Oportunidad\nZapata</string>
    <string name="start_subtitle_text">La aplicación para facilitar la búsqueda de trabajo. Del Zapata, para la comunidad.</string>
    <string name="start_iniciar_button">Iniciar</string>
    <string name="home_descubrir_text">Descubrir</string>
    <string name="home_image_text">Hacé clic para visitar<br></br>\n<b>nuestro blog</b></string>
    <string name="everydaynotificacion_text">¡No te olvides de ver las nuevas propuestas que se han añadido y enviar tu currículum para
        que otras personas puedan conocerte! 😁💼</string>
    <string name="infodialog_exampleusername">@username</string>
    <string name="secondinfodialog_exampleusername">@diegopediatra</string>
    <string name="thirdinfodialog_exampleusername">@lucasjoyas</string>
    <string name="newproposalnotificacion_single_text">¡Se ha añadido una nueva propuesta! Haz clic aquí para echarle un vistazo. 😉🔨</string>
    <string name="newproposalnotificacion_many_text">¡Se han añadido nuevas propuestas! Haz clic aquí para echarles un vistazo. 😉🔨</string>
    <string name="requisitos_text">¡Hola! Si estás interesado en publicar una propuesta en la bolsa de trabajo, necesitas tener en cuenta que existen algunos
        requisitos que debes cumplir;
        \n\n<br></br><br></br>• Primero, debes ser <b>mayor de edad y ser padre o hermano de algún alumno que asista a la Escuela</b> de Comercio Martín Zapata.
        \n\n<br></br><br></br>• Además, es importante que tu propuesta sea <b>legítima</b> y <b>esté en línea con las regulaciones</b> y leyes locales.
        \n\n<br></br><br></br>¡Tan solo cumpliendo con estos requisitos podés enviar tu solicitud para ser aprobada y publicada!
        Estos requisitos son importantes para asegurarnos de que nuestra plataforma de bolsa de trabajo sea segura y confiable para los usuarios.
        <b>Queremos fomentar una comunidad de confianza entre los padres y hermanos de alumnos de la escuela Martín Zapata</b>, y que a través de esta app puedan encontrar
        oportunidades de trabajo beneficiosas para ellos y sus familias.
    </string>
    <string name="pasosaseguir_text">Si estás buscando publicar una solicitud de trabajo, acá te indicamos los pasos que debes seguir:
        \n\n<br></br><br></br>1. <b>Toca el botón con el icono de una persona</b> en la pantalla principal de la app. Esto te va a llevar a una pantalla con un formulario para completar.
        \n<br></br>2. <b>Completá el formulario con tus datos</b> personales, información de contacto, descripción del trabajo, habilidades, experiencia, y cualquier otra
        información relevante que creas que puede ayudar a que los demás se interesen en tu propuesta.
        \n<br></br>3. Una vez que hayas completado el formulario, <b>presioná el botón \"enviar\"</b>
        para enviar tu solicitud a nuestro equipo.
        \n<br></br>4. Tus datos van a ser revisados manualmente por y si cumplen con los requisitos, <b>tu solicitud va a ser aprobada y publicada</b>
        en la plataforma para que los padres de los alumnos de la escuela puedan verla y contactarte.
        \n\n<br></br><br></br>Si tienes alguna pregunta o problema durante el proceso,
        no dudes en ponerte en contacto con nosotros:
    </string>
    <string name="nosotros_text">Esta plataforma fue creada por los <b>alumnos de 4°7°</b>, durante el <b>ciclo lectivo de 2023</b>. Agradecemos el esfuerzo y dedicación de los siguientes equipos que formaron parte en su desarrollo:
        \n\n<br></br><br></br>
        <b>• Diseño:</b> Josefina Marsala, Graciana March, Santiago Apoud, Lautaro Albornoz. Dieron forma a la estética y usabilidad de la app.
        \n<br></br>
        <b>• Programación:</b> Juan Frajberg, Gonzalo Molina, Fabricio Moran, Bernhard Chiara, Santistevan Santiago, Ernesto Buenanueva. Se encargaron de crear y estructurar el código que da funcionalidad a la app.
        \n<br></br>
        <b>• Pruebas:</b> Bruno Marcucci, Fermín Penessi. Contribuyeron en la fase de pruebas, ayudando a identificar y solucionar mejoras para una experiencia óptima.
        \n<br></br>
        <b>• Migración de datos:</b> Cristian Fernández, Sofía Parra, Santiago Troiano. Su trabajo fue asegurar una correcta transferencia y disponibilidad de la información.
        \n<br></br>
        <b>• Implementación:</b> Bautista Asenjo, Maximiliano Nuñez, Juanse Vía, Sol Bazzana, Sofía Bringa, Ornella Abrego, Dafne Gonzalez, Luciano Renda, Franco Quagliarello, Matías Vilches, Lorenzo Bazzana, Francisco Corzo. Ayudaron a fomentar activamente el uso de la app en los cursos de la escuela.
        \n<br></br>
        <b>• Video:</b> Borys Alfonzo, Uriel Cáceres, Fernando Berrios, Lucas Kibysz. Produjeron un video promocional que destaca las características y beneficios de nuestra aplicación.
        \n\n<br></br><br></br>Agradecemos a los docentes y directivos de la escuela Martín Zapata por su apoyo en este proyecto. A los usuarios, gracias por confiar en nuestra plataforma y ser parte de esta comunidad.
    </string>
    <string name="apoyanos_text">Si estás disfrutando nuestra app y te gustaría contribuir a enriquecer nuestra plataforma de colaboración, te invitamos a considerar hacer una donación a través de la plataforma "Cafecito App".
        \n\n<br></br><br></br>Cafecito App es una herramienta sencilla que permite respaldar proyectos y creadores que te gustan. Si te gustaría donar a nuestra causa, simplemente sigue estos pasos:
        \n\n<br></br><br></br>
        <b>• Registrate: </b> Si aún no tenés una cuenta, presionando en el link podes y regístrate utilizando tu dirección de correo electrónico o cuenta de redes sociales.
        \n<br></br>
        <b>• Encontranos:</b> Una vez dentro de la aplicación, buscá nuestro perfil, haciendo click en este [link].
        \n<br></br>
        <b>• Elegí tu contribución:</b> Una vez en nuestro perfil, vas a encontrar la opción de hacer una donación. Cafecito App te permite seleccionar la cantidad que deseas donar, ofreciéndote diferentes opciones para adaptarse a tu presupuesto y nivel de apoyo.
        \n<br></br>
        <b>• Realiza la donación:</b> Seguí las instrucciones proporcionadas por la aplicación para completar el proceso de donación de manera segura y conveniente. Podés optar por donar una sola vez o establecer contribuciones periódicas, según tu preferencia.
        \n<br></br>
        <b>• ¡Listo!:</b> Tu donación será recibida con gratitud y va a ir destinada directamente al progreso y mejora de nuestra aplicación y a la implementación de nuevas características que beneficiarán a nuestra comunidad.
        \n\n<br></br><br></br>Agradecemos sinceramente cualquier cantidad que puedas donar. ¡Juntos construimos un mejor futuro para nuestra aplicación y para la escuela!
    </string>
    <string name="mail_pasosaseguir_text">
        • <i><u>oportunidadzapata@gmail.com</u></i>.
    </string>
    <string name="contact_proposalexampleleer_text">Descripción. <font color='#3876F6'><u>Leer más.</u></font></string>
    <string name="contact_firstexampleleer_text">Como psicóloga, mi objetivo es ayudar a mis pacientes a superar los desafíos emocionales y mentales y alcanzar una vida más feliz y satisfactoria. <font color='#3876F6'><u>Leer más.</u></font></string>
    <string name="contact_secondexampleleer_text">Como pediatra, mi objetivo es proporcionar atención médica de calidad y apoyar el bienestar general de los infantes y sus familias. <font color='#3876F6'><u>Leer más.</u></font></string>
    <string name="contact_thirdexampleleer_text">Como joyero, mi objetivo es crear y reparar joyas exquisitas, brindando un servicio personalizado y transformando los sueños de mis clientes en piezas únicas de belleza. <font color='#3876F6'><u>Leer más.</u></font></string>
    <string name="blog_firstexampleleer_text">Destacar y hacer que tu propuesta atraiga a potenciales clientes es importante, descubrí cómo volver tu propuesta atractiva con estos tips y así conseguir más oportunidades laborales. <font color='#558CFF'><u>Leer más.</u></font></string>
    <string name="blog_secondexampleleer_text">Enterate de las funciones que se sumaron a nuestra app en esta última versión. <font color='#558CFF'><u>Leer más.</u></font></string>
    <string name="blog_thirdexampleleer_text">Nuestra meta es fomentar la colaboración entre las familias de la comunidad escolar y ayudarlas a encontrar y ofrecer oportunidades de trabajo innovadoras y beneficiosas. <font color='#558CFF'><u>Leer más.</u></font></string>
    <string name="firstpost_content_text">Cuando se trata de publicar una propuesta de trabajo, es crucial destacar y captar la atención de los usuarios.
        Acá vas a encontrar algunos tips para volver tu a propuesta más llamativa y atractiva.
        <br></br><br></br>\n\n<b>Descripción completa de tu servicio:</b> al redactar tu propuesta, asegurate de describir de manera completa el servicio que ofreces y tu forma de trabajo.
        Los clientes tienen que poder comprender claramente qué es lo que ofreces y cómo pueden beneficiarse de ello. Detallá los aspectos clave, resalta los
        puntos fuertes y mostrá cómo puedes solucionar los problemas o necesidades de tus clientes. Una descripción completa y convincente despertará el interés de los usuarios.
        <br></br><br></br>\n\n<b>Añadí imágenes y elementos visuales:</b> Si tienes un emprendimiento o podés agregar imágenes que ayuden a visualizar mejor tu servicio, no dudes en hacerlo.
        Mostrar ejemplos de tu trabajo/productos, les permite a los clientes visualizar cómo sería trabajar con vos.
        <br></br><br></br>\n\n<b>Ampliá tus canales de contacto:</b> no te limites solo a proporcionar tu número de teléfono como única forma de contacto. En el formulario, tenés la
        opción de agregar otra forma de contacto, como enlaces a tu perfil de Instagram, Facebook, TikTok o cualquier otra plataforma relevante para tu propuesta. Aprovechá
        las redes sociales para compartir contenido relevante, interactuar con tu audiencia y mostrar tu experiencia.
        <br></br><br></br>\n\nAdemás de lo mencionado, otras ideas para hacer tu propuesta más llamativa son: ofrecer promociones o descuentos especiales, crear un perfil en las
        redes o página de destino para obtener más información, realizar videos cortos o tutoriales para mostrar tus habilidades y proceso de trabajo. ¡La clave
        está en ser creativo y encontrar formas únicas de destacarte!</string>
</resources>