<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idStartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StartActivity">

    <View
        android:id="@+id/home_coverscreen_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:elevation="5dp"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/start_girl_image"
                android:layout_width="@dimen/_215sdp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/start_girl_image" />

            <TextView
                android:id="@+id/start_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/nunito_black"
                android:lineSpacingMultiplier="0.65"
                android:text="@string/start_title_text"
                android:textColor="#000000"
                android:textSize="@dimen/_44ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.365"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_girl_image" />

            <TextView
                android:id="@+id/start_subtitle_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:fontFamily="@font/nunito_regular"
                android:lineSpacingMultiplier="0.75"
                android:text="@string/start_subtitle_text"
                android:textColor="#777777"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/start_iniciar_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/start_title_text"
                app:layout_constraintTop_toBottomOf="@+id/start_title_text"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_iniciar_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:background="@drawable/start_roundedbutton_background"
                android:backgroundTint="#3876F6"
                android:fontFamily="@font/nunito_extrabold"
                android:includeFontPadding="false"
                android:text="@string/start_iniciar_button"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/start_title_text"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/home_donotshowagain_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:text="No volver a mostrar"
                android:textColor="#000000"
                android:fontFamily="@font/nunito_regular"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/start_iniciar_button"
                app:layout_constraintStart_toEndOf="@id/start_iniciar_button"
                app:layout_constraintTop_toTopOf="@id/start_iniciar_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>